--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	<!-- Artifact identification and properties -->
 
 	<groupId>Acme.com</groupId>
-	<artifactId>Acme-Shout</artifactId>
+	<artifactId>Acme-Dance</artifactId>
 	<version>0.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	
@@ -30,9 +30,9 @@
 
 	<!-- Indexing information -->
 
-	<name>Acme Shout</name>
-	<url>http://www.acme-shout.com</url>
-	<description>Users can use this system to shout</description>
+	<name>Acme Dance</name>
+	<url>http://www.acme-dance.com</url>
+	<description>Academia de baile</description>
 	
 	<!-- Build commands -->
 
